# JDebug

./: LICENSE  README.md  nsCMakeConfig.cmake  nsSdkRoot.txt
Code/BuildSystem/AzurePipelines/: Android-arm64.yml  Android-x64.yml  Linux-x64.yml  MacOS-x64.yml  Windows-x64.yml  clang-tidy.yml
Code/BuildSystem/CMake/: FindNsOpenXR.cmake  nsUtils.cmake
Code/Core/: CMakeLists.txt  CorePCH.cpp
Code/Core/Collection/: CollectionComponent.h  CollectionResource.h  CollectionUtils.h
Code/Core/Configuration/: PlatformProfile.h
Code/Core/Console/: CommandInterpreter.h  Console.h
Code/Core/Curves/: ColorGradientResource.h  Curve1DResource.h
Code/Core/GameApplication/: GameApplicationBase.h  WindowOutputTargetBase.h
Code/Core/GameState/: ForwardEventsToGameStateComponent.h  GameStateBase.h  GameStateWindow.h  StateMap.h
Code/Core/Graphics/: AmbientCubeBasis.h  Camera.h  ConvexHull.h  Geometry.h  Spline.h
Code/Core/Input/: InputDevice.h  InputManager.h  VirtualThumbStick.h
Code/Core/Interfaces/: FrameCaptureInterface.h  NavmeshGeoWorldModule.cpp  NavmeshGeoWorldModule.h  PhysicsQuery.h  PhysicsWorldModule.cpp  PhysicsWorldModule.h  RemoteToolingInterface.h  SoundInterface.cpp  SoundInterface.h  WindWorldModule.cpp  WindWorldModule.h
Code/Core/Messages/: ApplyOnlyToMessage.h  CommonMessages.h  DeleteObjectMessage.h  HierarchyChangedMessages.h  SetColorMessage.h  TransformChangedMessage.h  UpdateLocalBoundsMessage.h
Code/Core/Physics/: SurfaceResource.h  SurfaceResourceDescriptor.h
Code/Core/Scripting/: LuaWrapper.h  (+6 more)
Code/DirectX11Renderer/: CMakeLists.txt  DirectX11RendererDLL.h  DirectX11RendererModule.cpp  DirectX11RendererModule.h  DirectX11RendererPCH.cpp  DirectX11RendererPCH.h
Code/Foundation/: Basics.h  CMakeLists.txt  FoundationPCH.cpp  FoundationPCH.h  UserConfig.h  ezEngine.natvis  ezEngine.py
Code/GameEngine/: GameEnginePCH.h
Code/JDebugApp/: CMakeLists.txt  JDebugViewportWidget.cpp  JDebugViewportWidget.h  LogDockWidget.cpp  LogDockWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h
Code/JDebugApp/Resources/: JDebugApp.qrc
Code/JDebugApp/Resources/styles/: dark.qss
Code/JVDSDK/: CMakeLists.txt  JVDSDK.h  JVDSDKDLL.h  JVDSDKPCH.cpp  JVDSDKPCH.h
Code/PvdRenderer/: CMakeLists.txt  PvdRendererDLL.h  PvdRendererModule.cpp  PvdRendererModule.h  PvdRendererPCH.cpp  PvdRendererPCH.h
Code/PvdRenderer/Components/: PvdBodyComponent.h
Code/PvdRenderer/Components/Implementation/: PvdBodyComponent.cpp
Code/PvdRenderer/Renderer/: PvdBodyPass.cpp  PvdBodyPass.h  PvdBodyRenderer.cpp  PvdBodyRenderer.h  PvdDirectX11Renderer.cpp  PvdDirectX11Renderer.h  PvdRenderData.cpp  PvdRenderData.h  PvdRendererInterface.h  PvdRendererPipelines.cpp  PvdRendererPipelines.h  PvdVulkanRenderer.cpp  PvdVulkanRenderer.h
Code/PvdRenderer/Scene/: PvdDefaultSceneBundle.cpp  PvdDefaultSceneBundle.h
Code/Texture/: CMakeLists.txt  TexturePCH.cpp  TexturePCH.h
Code/UnitTests/VulkanRendererTest/: CMakeLists.txt  VulkanRendererTest.cpp  VulkanRendererTestPCH.cpp
Code/UnitTests/VulkanRendererTest/Basics/: VulkanShaderSmokeTest.cpp
Code/Utilities/: CMakeLists.txt  UtilitiesDLL.h  UtilitiesPCH.cpp
Code/VulkanRenderer/: CMakeLists.txt  DxcSupport.cpp  DxcSupport.h  VulkanRendererDLL.h  VulkanRendererModule.cpp  VulkanRendererModule.h  VulkanRendererPCH.cpp
Code/VulkanRenderer/Core/: VkCommandContext.cpp  VkCommandContext.h  VkDevice.cpp  VkDevice.h  VkInstance.cpp  VkInstance.h  VkSwapChain.cpp  VkSwapChain.h  VkTypes.h  VolkLoader.cpp
Docs/: VulkanRendererArchitecture.md
(+850 files in other folders)
